--- a/app/src/main/res/layout/activity_computadora_actualizar.xml
+++ b/app/src/main/res/layout/activity_computadora_actualizar.xml
@@ -6,59 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".Computadora.ComputadoraActualizarActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_title_computadora"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:text="Computadora"
-            android:textSize="24sp" />
+            android:layout_marginStart="24dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_activo_compu_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="Activo"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/tv_title_computadora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:text="Computadora"
+                android:textSize="24sp" />
 
-        <Spinner
-            android:id="@+id/sp_marca_compu_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:entries="@array/marcas"
-            android:minHeight="48dp" />
+            <TextView
+                android:id="@+id/tv_activo_compu_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="Activo"
+                android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/et_anio_compu_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="Año"
-            android:inputType="number"
-            android:textSize="16sp" />
+            <Spinner
+                android:id="@+id/sp_marca_compu_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:entries="@array/marcas"
+                android:minHeight="48dp" />
 
-        <EditText
-            android:id="@+id/et_cpu_compu_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="CPU"
-            android:inputType="textPersonName"
-            android:textSize="16sp" />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/et_anio_compu_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Año"
+                android:inputType="number"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/et_cpu_compu_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="CPU"
+                android:inputType="textPersonName"
+                android:textSize="16sp"
+                android:layout_marginBottom="160dp"/>
+        </LinearLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
