--- a/app/src/main/res/layout/activity_monitor_actualizar.xml
+++ b/app/src/main/res/layout/activity_monitor_actualizar.xml
@@ -5,70 +5,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Monitor.MonitorActualizarActivity">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.16"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_title_monitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:text="Monitor"
-            android:textSize="24sp" />
-        <TextView
-            android:id="@+id/tv_monitor_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="176dp"
-            android:textSize="16sp"
-            android:text="Activo" />
-        <Spinner
-            android:id="@+id/spinner_activo_monitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:minHeight="48dp" />
-        <Spinner
-            android:id="@+id/spinner_marca_monitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/marcas"
-            android:layout_marginTop="16dp"
-            android:minHeight="48dp" />
-        <Spinner
-            android:id="@+id/spinner_pulgadas_monitor"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_marginTop="20dp"
-            android:entries="@array/pulgadasMonitor"
-            android:minHeight="48dp" />
-        <EditText
-            android:id="@+id/et_anio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="Año"
-            android:ems="10"
-            android:inputType="number"
-            android:minHeight="48dp" />
-        <EditText
-            android:id="@+id/plaintextModeloact"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:hint="Modelo"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:minHeight="48dp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_title_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:text="Monitor"
+                android:textSize="24sp" />
+            <TextView
+                android:id="@+id/tv_monitor_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="176dp"
+                android:textSize="16sp"
+                android:text="Activo" />
+            <Spinner
+                android:id="@+id/spinner_activo_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinner_marca_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:entries="@array/marcas"
+                android:layout_marginTop="16dp"
+                android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinner_pulgadas_monitor"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginTop="20dp"
+                android:entries="@array/pulgadasMonitor"
+                android:minHeight="48dp" />
+            <EditText
+                android:id="@+id/et_anio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="Año"
+                android:ems="10"
+                android:inputType="number"
+                android:minHeight="48dp" />
+            <EditText
+                android:id="@+id/plaintextModeloact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="Modelo"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:layout_marginBottom="160dp"/>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
