--- a/app/src/main/res/layout/activity_monitor_nuevo.xml
+++ b/app/src/main/res/layout/activity_monitor_nuevo.xml
@@ -5,80 +5,92 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Monitor.MonitorNuevoActivity">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tv_title_nmonitor"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:textSize="24sp"
-            android:text="Monitor" />
+            android:layout_marginStart="24dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.16"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/et_activo_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:textSize="16sp"
-            android:ems="10"
-            android:hint="Activo"
-            android:inputType="textCapCharacters"
-            android:minHeight="48dp" />
+            <TextView
+                android:id="@+id/tv_title_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:textSize="24sp"
+                android:text="Monitor" />
 
-        <Spinner
-            android:id="@+id/spinner_activo_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:minHeight="48dp" />
+            <EditText
+                android:id="@+id/et_activo_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:textSize="16sp"
+                android:ems="10"
+                android:hint="Activo"
+                android:inputType="textCapCharacters"
+                android:minHeight="48dp" />
 
-        <Spinner
-            android:id="@+id/spinner_marca_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:entries="@array/marcas"
-            android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinner_activo_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:minHeight="48dp" />
 
-        <Spinner
-            android:id="@+id/spinner_pulgadas_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:entries="@array/pulgadasMonitor"
-            android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinner_marca_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:entries="@array/marcas"
+                android:minHeight="48dp" />
 
-        <EditText
-            android:id="@+id/et_anio_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="Año"
-            android:textSize="16sp"
-            android:inputType="number"
-            android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinner_pulgadas_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:entries="@array/pulgadasMonitor"
+                android:minHeight="48dp" />
 
-        <EditText
-            android:id="@+id/et_modelo_nmonitor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="Modelo"
-            android:textSize="16sp"
-            android:inputType="textPersonName"
-            android:minHeight="48dp" />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/et_anio_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Año"
+                android:textSize="16sp"
+                android:inputType="number"
+                android:minHeight="48dp" />
+
+            <EditText
+                android:id="@+id/et_modelo_nmonitor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Modelo"
+                android:textSize="16sp"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:layout_marginBottom="160dp"/>
+        </LinearLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
