--- a/app/src/main/res/layout/activity_reporte.xml
+++ b/app/src/main/res/layout/activity_reporte.xml
@@ -10,10 +10,11 @@
         android:id="@+id/tvReporte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
         android:text="Aùn no se encuentran dispositivos"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25" />
