--- a/app/src/main/res/layout/activity_teclado_actualizar.xml
+++ b/app/src/main/res/layout/activity_teclado_actualizar.xml
@@ -6,85 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".Teclado.TecladoActualizarActivity">
 
-    <EditText
-        android:id="@+id/editTextTextModeloAct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextAnioAct"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextAnioAct"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextAnioAct" />
-
-    <Spinner
-        android:id="@+id/spinnerIdioma"
-        android:layout_width="165dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerMarca"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/spinnerMarca"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerMarca" />
-
-    <Spinner
-        android:id="@+id/spinnerMarca"
-        android:layout_width="165dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerPc"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/spinnerPc"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerPc" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="269dp"
-        android:text="Teclado"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewActivoTeclado"
-        android:layout_width="165dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="178dp"
-        android:text="TextView"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="24dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:text="Teclado"
+                android:textSize="24sp" />
+            <TextView
+                android:id="@+id/textViewActivoTeclado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:textSize="16sp"
+                android:text="Activo" />
+            <Spinner
+                android:id="@+id/spinnerPc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/spinnerMarca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="48dp"
+                android:entries="@array/marcas"
+                android:layout_marginTop="16dp" />
+            <Spinner
+                android:id="@+id/spinnerIdioma"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:entries="@array/idiomas"
+                android:minHeight="48dp"
+                android:layout_marginTop="16dp" />
+            <EditText
+                android:id="@+id/editTextTextAnioAct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textSize="16sp"
+                android:hint="Año" />
+            <EditText
+                android:id="@+id/editTextTextModeloAct"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:textSize="16sp"
+                android:inputType="textPersonName"
+                android:hint="Modelo"
+                android:layout_marginBottom="160dp"/>
+        </LinearLayout>
+    </ScrollView>
 
-    <EditText
-        android:id="@+id/editTextTextAnioAct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerIdioma"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/spinnerIdioma"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerIdioma" />
-
-    <Spinner
-        android:id="@+id/spinnerPc"
-        android:layout_width="165dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewActivoTeclado"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textViewActivoTeclado"
-        app:layout_constraintTop_toBottomOf="@+id/textViewActivoTeclado" />
 </androidx.constraintlayout.widget.ConstraintLayout>
