--- a/app/src/main/res/drawable-anydpi/ic_delete.xml
+++ b/app/src/main/res/drawable-anydpi/ic_delete.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
+    android:tint="?attr/colorPrimaryDark"
     android:alpha="0.6">
   <group android:scaleX="1.1111112"
       android:scaleY="1.1111112"
